--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </nav>
 
   <div class="content">
-    <h1>G.Abiram</h1>
+    <h1>Musharaf</h1>
     <h1>VIT Chennai</h1>
-    <h1>22BRS1236</h1>
+    <h1>22BRS1307</h1>
     <h1>CSE AI & Robotics</h1>
     <a href="indexhtml.html">
         <button>HTML TASKS</button>
